# epicenv

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: 1password.md  create-superuser.md  django.md  docker-compose.md  field-mapping.md  schema-reference.md
src/django_environs/management/commands/: create_env_file.py  diff_env_file.py
src/django_envtools/: _env.py  cli.py  env_parse.py  utils.py
src/django_envtools/management/commands/: create_env_file.py  diff_env_file.py
src/envutil/: _config.py  _env.py  _exceptions.py
src/envutil/cli/: __init__.py  diff.py  main.py  validate.py
src/envutil/management/commands/: create_env_file.py  diff_env_file.py
src/epicenv/: __init__.py  _config.py  _django.py  _env.py  _exceptions.py  password.py
src/epicenv/cli/: create.py  create_superuser.py  diff.py  main.py  secrets.py  validate.py
src/epicenv/frameworks/: __init__.py  base.py  django.py
src/epicenv/initializers/: __init__.py  _onepassword.py
src/epicenv/secrets/: __init__.py  base.py  onepassword.py
test_project/: db.sqlite3  pyproject.toml
test_project/config/: settings.py
tests/: conftest.py  test_cli_create_superuser.py  test_cli_secrets.py  test_create_env_file.py  test_create_superuser.py  test_diff_env_file.py  test_external_config.py  test_frameworks_django.py  test_initial_func.py  test_management_commands.py  test_onepassword_initializer.py  test_secrets_onepassword.py
