[project]
name = "django-environs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brent O'Connor", email = "brent@epicserve.com" }
]
requires-python = ">=3.10"
dependencies = [
    "environs[django]>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["test_project"]

[dependency-groups]
dev = [
    "django>=5.1.2",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = "test_project"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "S",  # bandit
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", ]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]

[tool.coverage.run]
source = ["src/"]
